--- a/index.html
+++ b/index.html
@@ -21,23 +21,9 @@
     <p style="position: absolute; left: 165px; top: 65px;"><b>Precipitation Scale</b></p>
     <p style="position: absolute; left: 165px; top: 95px;"><b>Precipitation Sphere Size</b></p>
     <p style="position: absolute; left: 165px; top: 125px;"><b>Precipitation Elevation</b></p>
-    <p style="position: absolute; left: 165px; top: 185px;"><b>Precipitation Year</b></p>
-    <p id="prYear" style="position: absolute; left: 50px; top: 145px; font-size: 28px;"></p>
+    <p style="position: absolute; left: 235px; top: 185px;"><b>Year</b></p>
+    <p id="prYear" style="position: absolute; left: 20px; top: 140px; font-size: 28px;"></p>
     <p style="position: absolute; left: 20px; top: 230px;"><b>Click and drag to rotate</b></p>
     <p style="position: absolute; left: 20px; top: 260px;"><b>Scroll to zoom</b></p>
-<!-- 
-    text("Z Scale", -width + 600, -height + 260);
-    text("Relief Sphere Size", -width + 600, -height + 305);
-    text("Precipitation Scale", -width + 600, -height + 350);
-    text("Precipitation Sphere Size", -width + 600, -height + 395);
-    text("Precipitation Elevation", -width + 600, -height + 440);
-    text(
-      `Precipitation Year ${prYearSlider.value().toString()}`,
-      -width + 600,
-      -height + 530
-    );
-  
-    text("Click and drag to rotate", -width + 500, -height + 700);
-    text("Scroll to zoom", -width + 500, -height + 770); -->
   </body>
 </html>
