features: vertical line, info on screen, sphere fill, changed font color

--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
     <p id="prYear" style="position: absolute; left: 20px; top: 140px; font-size: 28px;"></p>
     <p style="position: absolute; left: 20px; top: 230px;"><b>Click and drag to rotate</b></p>
     <p style="position: absolute; left: 20px; top: 260px;"><b>Scroll to zoom</b></p>
+    <div id="information"></div>
+    <!-- <p style="position: absolute; right: 20px; top: 0px;"><b>Press 'r' to reset</b></p> -->
   </body>
 </html>
